# zadarlabs_arm_ros1

./: .gitignore  CMakeLists.txt  README.md  package.xml  record_csv.sh  run_radar.sh
api_templates/: ApiSocketClusters.py  ApiSocketOdometry.py  ApiSocketScan.py  ApiSocketTracks.py
api_templates/ref/: ZadarFrame.proto
config/: ZadarLabs_rviz_config.rviz
launch/: master.launch  zprime.launch
lib/: requirements.txt
radar_driver/: README.txt
radar_driver/api_templates/: ApiSocketImu.py  ZadarFrame_pb2.py
radar_driver/lib/: Zadar_Record_csv-aarch64.AppImage  zprime.py
radar_driver/zadar_config/zprime/: w_250m_1024_config.json  w_250m_512_config_T.json  w_400m_512_config.json  w_400m_512_config_T.json  w_800m_512_config.json  w_85m_1024_config.json  w_85m_512_config.json
radar_driver/zadar_config/zprox/: w_config0.json  w_config1.json  w_config2_high_sensitivity.json  w_config3.json
radar_driver/zadar_viewer_webapp/: index.html
scripts/: record_bag.sh  run_radar.sh
zadar_config/: base_config.json
zadar_config/zprime/: viewer_T.json  w_10m_256_2048_config.json  w_10m_256_config_tdm.json  w_250m_512_config.json  w_30m_1024_config.json  w_30m_1024_hdr_config.json  w_400m_1024_config.json  w_800m_1024_config.json  w_85m_1024_config_hdr.json  w_85m_512_config_T.json
zadar_config/zsignal/: w_config_M0.json  w_config_M2_T.json
zadar_viewer_webapp/: viewer.html
zadar_viewer_webapp/js/: OrbitControls.js  display_settings.js  filter_settings.js  lit-core.min.js  main.js  three.min.js  tracking_table.js
zadar_viewer_webapp/style/: style.css
(+7 files in other folders)
