<?xml version="1.0"?>
<package format="2">
  <name>zadarlabs_arm_ros1</name>
  <version>0.0.1</version>
  <description>Zadar Labs ROS package</description>
  <maintainer email="greinema@ethz.ch">Max Greiner</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>